crates/toml/tests/snapshots/invalid/control/linetab-number-02.stderr
TOML parse error at line 1, column 24
  |
1 | linetab-number-02 = 1.5
  |                        ^
invalid float, expected nothing
